fix: color of menupane to make x sign visible

--- a/src/components/MenuPane.scss
+++ b/src/components/MenuPane.scss
@@ -19,7 +19,7 @@
   .menu {
     background-color: color.$grey-like-color;
     .dark-mode & {
-      background-color: color.$whitish-color-light;
+      background-color: color.$grey-like-color;
     }
 
     // flex-parent
